fix overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -59,6 +59,7 @@ body {
     cursor: pointer;
     width: 80%;
     margin: auto;
+    overflow: hidden;
 }
 
 a.post_content {
@@ -104,6 +105,7 @@ a.post_content {
 
 .comment_content {
     font-size: 14px;
+    overflow: hidden;
 }
 
 div.pagination {
